--- a/.github/workflows/bridge.yml
+++ b/.github/workflows/bridge.yml
@@ -4,6 +4,8 @@ name: Build flutter-rust-bridge
 
 on:
   workflow_call:
+    secrets:
+      SUBMODULE_TOKEN:
 
 env:
   CARGO_EXPAND_VERSION: "1.0.95"
@@ -28,6 +30,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+          token: ${{ secrets.SUBMODULE_TOKEN }}
 
       - name: Install prerequisites
         run: |
